# MCKE

./: .gitignore  CMakeLists.txt  README.md
include/: json.h
include/stb/: stb_img.h
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: cube.frag  cube.vert  default.frag  default.vert
res/shaders/challenges/: m_paint.frag  mac_cursor.frag  terrain.frag  terrain.vert
res/textures/format/: TexUVs.yaml  blocks.yaml
src/: main.cpp
src/App/: App.cpp  App.h
src/Gameplay/: Components.h  ECS.h  Physics.cpp  Physics.h  Player.cpp  Player.h
src/Graphics/: BlockParser.cpp  BlockParser.h  Camera.cpp  Camera.h  Shader.cpp  Shader.h  TextureParser.cpp  TextureParser.h  Vertex.h
src/Window/: Input.cpp  Input.h  Window.cpp  Window.h
src/World/: Chunk.cpp  Chunk.h  World.cpp  World.h
